ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: logs.info
    http:
      paths:
      - path: /
        backend:
          serviceName: log-client-app-deploy
          servicePort: 80
      - path: /v2/*
        backend:
          serviceName: log-server-app-deploy
          servicePort: 5000
